[gd_scene load_steps=8 format=4 uid="uid://bmqjww5qkdeoe"]

[ext_resource type="Script" path="res://world_scene.gd" id="1_4eagi"]
[ext_resource type="Script" path="res://MainCamera.gd" id="1_8gxau"]
[ext_resource type="Texture2D" uid="uid://dxfrgpa0br8ai" path="res://Assets/Tiles/Field/FieldsTileset.png" id="2_b8pko"]
[ext_resource type="Script" path="res://Hud/selectionPanel.gd" id="3_tnj6f"]
[ext_resource type="PackedScene" uid="uid://725u3xenkpx3" path="res://Hud/SelectionOutline.tscn" id="5_2r6q7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v8ccg"]
texture = ExtResource("2_b8pko")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0

[sub_resource type="TileSet" id="TileSet_joxx2"]
sources/0 = SubResource("TileSetAtlasSource_v8ccg")

[node name="WorldScene" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4eagi")

[node name="MainCamera" type="Camera2D" parent="."]
script = ExtResource("1_8gxau")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Hud"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="selectionPanel" type="VBoxContainer" parent="Hud/HBoxContainer"]
layout_mode = 2
script = ExtResource("3_tnj6f")

[node name="TypeOfTower" type="Label" parent="Hud/HBoxContainer/selectionPanel"]
layout_mode = 2
text = "Type of Tower"

[node name="Upgrade" type="Button" parent="Hud/HBoxContainer/selectionPanel"]
layout_mode = 2
text = "Upgrade Selected Tower"

[node name="DeleteButton" type="Button" parent="Hud/HBoxContainer/selectionPanel"]
layout_mode = 2
text = "Delete"

[node name="GameWindow" type="PanelContainer" parent="Hud/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="RightPanel" type="VBoxContainer" parent="Hud/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Hud/HBoxContainer/RightPanel"]
layout_mode = 2
text = "Upgrade"

[node name="Label" type="Label" parent="Hud/HBoxContainer/RightPanel"]
layout_mode = 2
text = "Mode:"

[node name="OptionButton" type="OptionButton" parent="Hud/HBoxContainer/RightPanel"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Move and Select"
popup/item_1/text = "placeTowers"
popup/item_1/id = 1
popup/item_2/text = "deleteTowers"
popup/item_2/id = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="TileMapLayer" type="TileMapLayer" parent="CanvasLayer"]
position = Vector2(-32, -32)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAEAAAALAAkAAAADAAEAAAAKAAkAAAAGAAEAAAAKAAkAAAAJAAEAAAAKAAkAAAAMAAEAAAAKAAkAAAAPAAEAAAAKAAkAAAAOAAAAAAAFAAoAAAANAAAAAAAEAAoAAAANAAEAAAAEAAsAAAAOAAEAAAAFAAsAAAAPAAAAAAAKAAkAAAAPAP//AAAKAAkAAAAOAP//AAAKAAkAAAANAP//AAAKAAkAAAAMAAAAAAAKAAkAAAAMAP//AAAKAAkAAAAMAAIAAAAKAAkAAAANAAIAAAAKAAkAAAAOAAIAAAAKAAkAAAAPAAIAAAAKAAkAAAAQAAIAAAAKAAkAAAAQAAEAAAAKAAkAAAAQAAAAAAAKAAkAAAAQAP//AAAKAAkAAAACAAAAAAABAAcAAAA=")
tile_set = SubResource("TileSet_joxx2")
y_sort_origin = -1

[node name="SelectionOutline" parent="." instance=ExtResource("5_2r6q7")]
visible = false

[connection signal="pressed" from="Hud/HBoxContainer/selectionPanel/Upgrade" to="Hud/HBoxContainer/selectionPanel" method="_onUpgrade"]
[connection signal="pressed" from="Hud/HBoxContainer/selectionPanel/DeleteButton" to="Hud/HBoxContainer/selectionPanel" method="_onDelete"]
[connection signal="pressed" from="Hud/HBoxContainer/RightPanel/Button" to="Hud/HBoxContainer/selectionPanel" method="_onUpgrade"]
[connection signal="item_selected" from="Hud/HBoxContainer/RightPanel/OptionButton" to="." method="changeMode"]
